data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_765.wast
;; - Test Description 6: Design a loop that uses `br_if` to branch based on a complex boolean expression that includes logical AND and OR operations. This will check if the condition evaluation logic accurately processes combined boolean expressions for branching purposes.

(assert_invalid
  (module (func $complex_boolean_expression_loop
    (loop (result i32) 
      (i32.const 1) 
      (i32.const 1)
      (i32.const 0)
      (i32.and)
      (i32.or)
      (br_if 0)
      (i32.const 0)
    )
  ))
  "type mismatch"
)